# frida-ide

./: .gitignore  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/builtins/snippets/: crypto_observer.js  intent_logger.js  license_bypass_pairip.js  method_tracer.js  root_detection_bypass.js  sharedprefs_logger.js  ssl_pinning_bypass.js
backend/app/models/: __init__.py  ai_session.py  hook_event.py  project.py  run_session.py  script.py  snippet.py
backend/app/routers/: _dev.py  ai.py  codeshare.py  devices.py  emulators.py  files.py  health.py  processes.py  projects.py  scripts.py  sessions.py  snippets.py  tty.py  ws.py
backend/app/services/: adb.py  apk_pipeline.py  claude_runner.py  codeshare.py  device_watcher.py  emulator.py  frida_manager.py  frida_server.py  pubsub.py  snippet_loader.py
backend/app/utils/: arch.py  paths.py
backend/tests/: test_extract_script.py  test_health.py  test_manifest_parser.py  test_snippet_loader.py  test_ws.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/ai/: ChatMessage.tsx  ChatPane.tsx  streamReducer.ts  types.ts
frontend/src/hooks/: useTabParams.ts
frontend/src/lib/: api.ts  ws.ts
frontend/src/routes/: DashboardRoute.tsx  DevicesRoute.tsx  EditorRoute.tsx  ProcessesRoute.tsx  ProjectAiRoute.tsx  ProjectFilesRoute.tsx  ProjectsRoute.tsx  SessionsRoute.tsx  SnippetsRoute.tsx
frontend/src/store/: editorStore.ts  toastStore.ts  uiStore.ts  workspaceStore.ts
scripts/: dev.sh
(+17 files in other folders)
