[project]
name = "frida-ide"
version = "0.1.0"
description = "Web-based IDE for Frida with AI assistance via Claude Code"
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "frida==17.9.1",
    "frida-tools>=14,<15",
    "sqlmodel>=0.0.22,<0.1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.17,<0.1",
    "httpx>=0.27,<0.28",
    "aiofiles>=24.1,<25",
    "websockets>=13,<14",
    "lxml>=5.3,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx",
]

[project.scripts]
frida-ide = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

# Bundle the built frontend into the wheel under app/frontend_dist/.
# Run `pnpm --dir frontend build` before `pip install .` so the dist is fresh.
[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "app/frontend_dist"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
